--- a/frontend/src/app/components/user-list/user-list.component.html
+++ b/frontend/src/app/components/user-list/user-list.component.html
@@ -1,8 +1,21 @@
 <div class="user-list-container">
-  <h3>Users</h3>
-  <div *ngFor="let user of users">
-    <p>{{ user.username }}
-      <button (click)="deleteUser(user._id)">Delete</button>
-    </p>
+  <div class="user-list-header">
+    <h2 class="user-list-title">User Management</h2>
+    <div class="total-users">{{users.length}} users</div>
+  </div>
+  
+  <div class="user-list">
+    <div *ngFor="let user of users" class="user-card">
+      <div class="user-info">
+        <span class="username">{{ user.username }}</span>
+      </div>
+      <button class="delete-btn" (click)="deleteUser(user._id)">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+          <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+          <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+        </svg>
+        Delete
+      </button>
+    </div>
   </div>
 </div>
